# cattern_aide

./: .gitignore  AIDE_PLAN.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml.example
.claude/: settings.json
src/: app.rs  clipboard.rs  config.rs  events.rs  main.rs
src/agent/: api_agent.rs  http_proxy_agent.rs  mod.rs  openai_api_agent.rs  pty_agent.rs  subprocess_agent.rs
src/state/: agent.rs  container.rs  filetree.rs  git.rs  mod.rs  project.rs  pty_screen.rs
src/ui/: file_tree.rs  git_panel.rs  layout.rs  led.rs  main_area.rs  mod.rs  modal.rs  sidebar.rs  tab_content.rs  theme.rs
